force-app/main/default/objects/Exception_Handling__c/Exception_Handling__c.object-meta.xml
<CustomObject>
    <label>Exception Handling</label>
    <nameField>
        <displayFormat>Exception-{0000000}</displayFormat>
        <label>Exception Handling Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Handlings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>