force-app/main/default/objects/Exception_Handling__c/fields/Additional_Info_JSON__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info_JSON__c</fullName>
    <description>Field to store additional info as serialised JSON while logging the exception</description>
    <label>Additional Info JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>