force-app/main/default/objects/Exception_Handling__c/fields/batch_job__c.field-meta.xml
<CustomField>
    <fullName>batch_job__c</fullName>
    <label>Batch job</label>
    <length>100</length>
    <type>Text</type>
</CustomField>