force-app/main/default/objects/Exception_Handling__c/fields/Commission_Failure__c.field-meta.xml
<CustomField>
    <fullName>Commission_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commission Failure</label>
    <type>Checkbox</type>
</CustomField>