force-app/main/default/objects/Exception_Handling__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <description>Name of component logging the exception or log</description>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>