force-app/main/default/objects/Exception_Handling__c/fields/Created_by__c.field-meta.xml
<CustomField>
    <fullName>Created_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exception_Handlings</relationshipName>
    <type>Lookup</type>
</CustomField>