force-app/main/default/objects/Exception_Handling__c/fields/CSVData__c.field-meta.xml
<CustomField>
    <fullName>CSVData__c</fullName>
    <label>CSVData</label>
    <length>255</length>
    <type>Text</type>
</CustomField>