force-app/main/default/objects/Exception_Handling__c/fields/Exception_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Exception_Created_Date__c</fullName>
    <label>Exception Created Date</label>
    <type>Date</type>
</CustomField>