force-app/main/default/objects/Exception_Handling__c/fields/Exception_JSON__c.field-meta.xml
<CustomField>
    <fullName>Exception_JSON__c</fullName>
    <description>Field to capture exception as serialised json</description>
    <label>Exception JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>