force-app/main/default/objects/Exception_Handling__c/fields/field1__c.field-meta.xml
<CustomField>
    <fullName>field1__c</fullName>
    <label>field1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>