force-app/main/default/objects/Exception_Handling__c/fields/Is_Reprocessed__c.field-meta.xml
<CustomField>
    <fullName>Is_Reprocessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reprocessed</label>
    <type>Checkbox</type>
</CustomField>