force-app/main/default/objects/Exception_Handling__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <description>Used to store the names of batch classes</description>
    <label>Job Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ManualTerritoryAssignment</fullName>
            </value>
            <value>
                <fullName>DSOOrders</fullName>
            </value>
            <value>
                <fullName>CommissionQuarterlyCalculations</fullName>
            </value>
            <value>
                <fullName>DistributorAssignment</fullName>
            </value>
            <value>
                <fullName>AccountOwnership</fullName>
            </value>
            <value>
                <fullName>VatValidation</fullName>
            </value>
            <value>
                <fullName>UPSAddressValidation</fullName>
            </value>
            <value>
                <fullName>AccountShare</fullName>
            </value>
            <value>
                <fullName>OrderShare</fullName>
            </value>
            <value>
                <fullName>PCSOrderProcessing</fullName>
            </value>
            <value>
                <fullName>FlexiblePaymentTerm</fullName>
            </value>
            <value>
                <fullName>BatchAccountTeamDeletion</fullName>
            </value>
            <value>
                <fullName>AssetTriggerFactoryHandler</fullName>
            </value>
            <value>
                <fullName>RMA Creation</fullName>
            </value>
            <value>
                <fullName>BatchSCExpriy</fullName>
            </value>
            <value>
                <fullName>RetroActiveDiscountBatch</fullName>
            </value>
            <value>
                <fullName>SFAR Bypass Automation</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
                <isActive>false</isActive>
                <label>Account</label>
            </value>
            <value>
                <fullName>Asset</fullName>
                <isActive>false</isActive>
                <label>Asset</label>
            </value>
            <value>
                <fullName>BatchAccountAddressValidation</fullName>
                <isActive>false</isActive>
                <label>BatchAccountAddressValidation</label>
            </value>
            <value>
                <fullName>BatchAccountOwnerUpdate</fullName>
                <isActive>false</isActive>
                <label>BatchAccountOwnerUpdate</label>
            </value>
            <value>
                <fullName>BatchAccountTimeZoneUpdate</fullName>
                <isActive>false</isActive>
                <label>BatchAccountTimeZoneUpdate</label>
            </value>
            <value>
                <fullName>BatchCommissionCreation</fullName>
                <isActive>false</isActive>
                <label>BatchCommissionCreation</label>
            </value>
            <value>
                <fullName>BatchCommissionQuarterlyCalculations</fullName>
                <isActive>false</isActive>
                <label>BatchCommissionQuarterlyCalculations</label>
            </value>
            <value>
                <fullName>BatchEmployeeAccountsOwnerUpdate</fullName>
                <isActive>false</isActive>
                <label>BatchEmployeeAccountsOwnerUpdate</label>
            </value>
            <value>
                <fullName>BatchOnboardAddressValidation</fullName>
                <isActive>false</isActive>
                <label>BatchOnboardAddressValidation</label>
            </value>
            <value>
                <fullName>BatchShareOrderRecords</fullName>
                <isActive>false</isActive>
                <label>BatchShareOrderRecords</label>
            </value>
            <value>
                <fullName>BatchUpdateDSOOrders</fullName>
                <isActive>false</isActive>
                <label>BatchUpdateDSOOrders</label>
            </value>
            <value>
                <fullName>BatchUpdateDistributorAssignment</fullName>
                <isActive>false</isActive>
                <label>BatchUpdateDistributorAssignment</label>
            </value>
            <value>
                <fullName>BatchVatValidation</fullName>
                <isActive>false</isActive>
                <label>BatchVatValidation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>