force-app/main/default/objects/Exception_Handling__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <description>Field to store the name of business module which logs the exception</description>
    <label>Module</label>
    <length>255</length>
    <type>Text</type>
</CustomField>