force-app/main/default/objects/Exception_Handling__c/fields/Process_id__c.field-meta.xml
<CustomField>
    <fullName>Process_id__c</fullName>
    <label>Process id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>