force-app/main/default/objects/Exception_Handling__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>For storing record id of the failed record</description>
    <label>Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>