force-app/main/default/objects/Exception_Handling__c/fields/Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Record_Ids__c</fullName>
    <description>Comma separated</description>
    <label>Record Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>