force-app/main/default/objects/Exception_Handling__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>For storing input in a json format</description>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>