force-app/main/default/objects/Exception_Handling__c/fields/Sub_Domain__c.field-meta.xml
<CustomField>
    <fullName>Sub_Domain__c</fullName>
    <label>Sub Domain</label>
    <length>120</length>
    <type>Text</type>
</CustomField>