force-app/main/default/objects/Exception_Handling__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>Unique id for the transaction getting logged</description>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>