force-app/main/default/objects/Exception_Handling__c/listViews/Exception_Handling.listView-meta.xml
<ListView>
    <fullName>Exception_Handling</fullName>
    <columns>NAME</columns>
    <columns>Transaction_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Component_Name__c</columns>
    <columns>Module__c</columns>
    <columns>Additional_Info_JSON__c</columns>
    <filterScope>Everything</filterScope>
    <label>Exception Handling</label>
</ListView>